# pyannote-database

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: doc.yml  pypi.yml  test.yml
_sources/: changelog.rst.txt
_static/: documentation_options.js
doc/: Makefile  make.bat
doc/source/: changelog.rst  conf.py  index.rst
examples/: lhotse_usage.py
pyannote/: __init__.py
pyannote/database/: __init__.py  _version.py  cli.py  config.py  custom.py  database.py  file_finder.py  filefinder.py  filelist.py  loader.py  meta.py  pyannotedbconfig.py  registry.py  singleton.py  types.py  util.py
pyannote/database/protocol/: __init__.py  collection.py  protocol.py  speaker_diarization.py  speaker_identification.py  speaker_recognition.py  speaker_spotting.py  speaker_verification.py
src/pyannote/database/: __init__.py  cli.py  lhotse.py  loader.py  util.py
src/pyannote/database/protocol/: collection.py  segmentation.py
tests/: database.yml  show-db.py  test-custom-db.py  test.py  test_dummy.py  test_lhotse.py  test_lhotse_ami_integration.py  test_registry.py  test_set_yml.py  trial.py
tests/data/: database.yml
tests/data/ctms/: filename1.ctm  filename2.ctm
tests/data/lists/: train.lst
tests/data/mapping/: domain.map  duration.map
tests/data/rttms/: train.rttm
tests/data/trial/: train.trial
tests/data/uems/: train.uem
