[project]
name = "pyannote-database"
version = "6.0.0a0"
description = "Interface to multimedia databases and experimental protocols"
readme = "README.md"
authors = [
    { name = "Hervé BREDIN", email = "herve@pyannote.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pyannote-core>=5.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
pyannote-database = "pyannote.database.cli:main"

[project.entry-points.'pyannote.database.loader']
".rttm" = "pyannote.database.loader:RTTMLoader"
".uem" = "pyannote.database.loader:UEMLoader"
".ctm" = "pyannote.database.loader:CTMLoader"
".map" = "pyannote.database.loader:MAPLoader"
".lab" = "pyannote.database.loader:LABLoader"
".stm" = "pyannote.database.loader:STMLoader"

[project.optional-dependencies]
cli = [
    "typer>=0.15.1",
]
test = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]
