[project]
name = "pyannote-database"
description = "Interface to multimedia databases and experimental protocols"
readme = "README.md"
authors = [
    { name = "Hervé BREDIN", email = "herve@pyannote.ai" }
]
requires-python = ">=3.10"

dynamic = [
  "version",
]

dependencies = [
    "pandas>=2.2.3",
    "pyannote-core>=6.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
pyannote-database = "pyannote.database.cli:main"

[project.entry-points.'pyannote.database.loader']
".rttm" = "pyannote.database.loader:RTTMLoader"
".uem" = "pyannote.database.loader:UEMLoader"
".ctm" = "pyannote.database.loader:CTMLoader"
".map" = "pyannote.database.loader:MAPLoader"
".lab" = "pyannote.database.loader:LABLoader"
".stm" = "pyannote.database.loader:STMLoader"

[project.optional-dependencies]
cli = [
    "typer>=0.15.1",
]
test = [
    "pytest>=8.3.4",
]
doc = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
